# sl0thifier

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  auto-changelog.json  inspect_birefnet.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  setup.cfg  sl0thify.py
sl0thfier/: config.py  imageio.py  inference.py  preprocess.py  types.py
sl0thifier/: __init__.py  core.py  exceptions.py  gui.py  logger.py  main.py  models.py  resize.py  tone.py  utils.py
sl0thifier/ui/: preview.py
tests/: conftest.py  test_birefnet.py  test_models.py  test_realesrgan.py  test_tone.py
