[project]
name = "sl0thm4n-image-preprocessor"
license = "MIT"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "onnxruntime-gpu>=1.23.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "rembg>=2.0.67",
    "tkinterdnd2>=0.4.3",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.4",
    "pytest>=8.4.2",
    "pytest-black>=0.6.0",
    "pytest-cov>=7.0.0",
    "pytest-ruff>=0.5",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F"]
exclude = ["build", "dist", ".venv", "__pycache__"]
extend-ignore = ["E203"]

[tool.bump-my-version]
version = "0.1.0"
tag = true
tag-name = "v{new_version}"

[tool.bump-my-version.file-find]
search-paths = ["sl0thifier", "pyproject.toml"]

[[tool.bump-my-version.version-pattern]]
search = 'version\s*=\s*"(?P<version>\d+\.\d+\.\d+)"'
replace = 'version = "{new_version}"'

[[tool.bump-my-version.version-pattern]]
search = '__version__\s*=\s*"(?P<version>\d+\.\d+\.\d+)"'
replace = '__version__ = "{new_version}"'

[project.scripts]
sl0thify = "sl0thifier.sl0thify:main"
