[metadata]
name = sl0thifier
version = 1.0.0
author = sl0thm4n
description = GPU-accelerated AI image preprocessor for upscaling, tone correction, and background removal.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/sl0thm4n/sl0thifier
project_urls =
    Bug Tracker = https://github.com/sl0thm4n/sl0thifier/issues
    Documentation = https://github.com/sl0thm4n/sl0thifier/wiki
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
python_requires = >=3.10
install_requires =
    onnxruntime-gpu>=1.17
    pillow
    numpy
    opencv-python
    coloredlogs
    tqdm
    real-esrgan
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    sl0thifier = preprocess:main
